--- a/Complete-Python-3-Bootcamp-master/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/Complete-Python-3-Bootcamp-master/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -892,29 +892,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
+    "# will take in a list of numbers and perform a check for 007\n",
     "def spy_game(nums):\n",
-    "    pass"
+    "    \n",
+    "    # setup a code list - outside data structure\n",
+    "    code = [0,0,7,'x']\n",
+    "    # next code would look like [0,7,'x']\n",
+    "    # next code would look like [7,'x']\n",
+    "    # next code would look like ['x']\n",
+    "    for num in nums:\n",
+    "        if num == code[0]:\n",
+    "            code.pop(0)\n",
+    "            \n",
+    "    return len(code) == 1\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,2,4,0,0,7,5])"
@@ -922,14 +939,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,0,2,4,0,5,7])"
@@ -937,14 +962,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,7,2,0,4,5,0])"
@@ -962,30 +995,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
     "def count_primes(num):\n",
-    "    pass\n",
+    "\n",
+    "    # Check for 0 or 1 input\n",
+    "    if num < 2:\n",
+    "        return 0\n",
+    "    ###################\n",
+    "    # 2 or greater\n",
+    "    ###################\n",
+    "    \n",
+    "    # Store our prime numbers\n",
+    "    primes = [2]\n",
+    "    # counter going up to the input num\n",
+    "    x = 3\n",
+    "    \n",
+    "    # x is going through every number up to input num\n",
+    "    while x <= num:\n",
+    "        for y in range(3,x,2):\n",
+    "            if x%y == 0:\n",
+    "                x += 2\n",
+    "                break\n",
+    "                \n",
+    "        else:\n",
+    "            primes.append(x)\n",
+    "            x += 2\n",
+    "    print(primes)\n",
+    "    return len(primes)\n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "count_primes(100)"
